--- a/src/index.css
+++ b/src/index.css
@@ -20,13 +20,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  /* Remove these conflicting properties:
+  display: flex;
+  place-items: center;
+  */
 }
 
 h1 {
