--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,12 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+footer {
+  position: relative;
+  clip-path: polygon(0 15px, 100% 0, 100% 100%, 0 100%);
+  margin-top: 15px;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
